--- a/Views/Descricao/Index.cshtml
+++ b/Views/Descricao/Index.cshtml
@@ -28,10 +28,10 @@
 @foreach (var item in Model) {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.Nota.Id)
+                    @Html.DisplayFor(modelItem => item.Nota.NotaValor)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Cadastro.CadastroId)
+                    @Html.DisplayFor(modelItem => item.Cadastro.CadastroNome)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.DescricaoJogo)
