Formação das letras

--- a/Views/Descricao/Index.cshtml
+++ b/Views/Descricao/Index.cshtml
@@ -16,7 +16,7 @@
                 @Html.DisplayNameFor(model => model.Nota)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Cadastro)
+                Jogo
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.DescricaoJogo)
