--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -16,3 +16,12 @@ html {
 body {
   margin-bottom: 60px;
 }
+header {
+    width: 100%;
+    height:100%;
+    background-color: black; 
+}
+.img-logo{
+    width: 150px;
+    height: 115px;
+}
