--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -4,5 +4,5 @@
 
 <div class="text-center">
     <h1 class="display-4">Bem vindo ao Projeto-X</h1>
-    <p>Siga-no instagram <a href="https://docs.microsoft.com/aspnet/core"> postamos novidades toda semana</a>.</p>
+    <p>Siga-no instagram postamos novidades toda semana <a href="https://instagram.com/projeto_xgames?igshid=NzZlODBkYWE4Ng%3D%3D&utm_source=qr"><img src="c:\Users\Aluno\Desktop\imagem isnta.jpg" /></a>.</p>
 </div>
