--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -15,6 +15,8 @@ html {
 
 body {
   margin-bottom: 60px;
+  background-color: black;
+  color: white;
 }
 header {
     width: 100%;
@@ -24,4 +26,8 @@ header {
 .img-logo {
     width:150px;
     height:115px;
+}
+.insta {
+    width: 50px;
+    height: 35px;
 }
