--- a/Views/Descricao/Index.cshtml
+++ b/Views/Descricao/Index.cshtml
@@ -7,7 +7,7 @@
 <h1>Descrição</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Criar descrição</a>
 </p>
 <table class="table">
     <thead>
@@ -37,8 +37,8 @@
                 @Html.DisplayFor(modelItem => item.DescricaoJogo)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.DescricaoId">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.DescricaoId">Details</a> |
+                <a asp-action="Edit" asp-route-id="@item.DescricaoId">Editar</a> |
+                <a asp-action="Details" asp-route-id="@item.DescricaoId">Detalhes</a> |
                 <a asp-action="Delete" asp-route-id="@item.DescricaoId">Delete</a>
             </td>
         </tr>
