--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -12,6 +12,12 @@ html {
   position: relative;
   min-height: 100%;
 }
+.table {
+    color: white;
+}
+a{
+    color: white;
+}
 
 body {
   margin-bottom: 60px;
