--- a/Views/Cadastro/Index.cshtml
+++ b/Views/Cadastro/Index.cshtml
@@ -7,7 +7,7 @@
 <h1>Jogo</h1>
 
 <p>
-    <a asp-action="Create">Criar Cadastro</a>
+    <a asp-action="Create">Criar Cadastro do Jogo</a>
 </p>
 <div>
     @using (Html.BeginForm("Index", "Cadastro", FormMethod.Get))
