--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -5,8 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - ProjetoGame</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="/css/Stylebotao.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/ProjetoGame.styles.css" asp-append-version="true" />
+    <script src="https://use.fontawesome.com/3661c174df.js"></script>
 </head>
 <body>
     <header>
@@ -37,6 +39,16 @@
                         </li>
                     </ul>
                 </div>
+                <li class="item-submenu">
+                    <div class="icon">
+                        <i class="fa fa-user-circle-o" style="" aria-hidden="true"></i>
+                    </div>
+                    <ul class="submenu">
+                        <li><a href="#">Login</a></li>
+                        <li><a href="#"></a>Cadastre-se</li>
+                        <li><a href="#"></a>Sair</li>
+                    </ul>
+                </li>
             </div>
         </nav>
     </header>
