mudanças no sub menu

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -45,8 +45,8 @@
                     </div>
                     <ul class="submenu">
                         <li><a href="#">Login</a></li>
-                        <li><a href="#"></a>Cadastre-se</li>
-                        <li><a href="#"></a>Sair</li>
+                        <li><a href="#">Cadastre-se</a></li>
+                        <li><a href="#">Sair</a></li>
                     </ul>
                 </li>
             </div>
