--- a/Views/Descricao/Index.cshtml
+++ b/Views/Descricao/Index.cshtml
@@ -14,7 +14,7 @@
     {
                 <p>
                     Digite aqui sua pesquisa: @Html.TextBox("pesquisa")
-                    <input type="submit" value="Pesquisar"/>
+            <input class="pesquisa" type="submit" value="Pesquisar" />
                 </p>
     }
 </div>
@@ -46,9 +46,9 @@
                 @Html.DisplayFor(modelItem => item.DescricaoJogo)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.DescricaoId">Editar</a> |
-                <a asp-action="Details" asp-route-id="@item.DescricaoId">Detalhes</a> |
-                <a asp-action="Delete" asp-route-id="@item.DescricaoId">Delete</a>
+                    <a class="botao" asp-action="Edit" asp-route-id="@item.DescricaoId">Editar</a> |
+                    <a class="botao" asp-action="Details" asp-route-id="@item.DescricaoId">Detalhes</a> |
+                    <a class="botao" asp-action="Delete" asp-route-id="@item.DescricaoId">Delete</a>
             </td>
         </tr>
 }
