--- a/Views/Nota/Index.cshtml
+++ b/Views/Nota/Index.cshtml
@@ -7,14 +7,14 @@
 <h1>Nota</h1>
 
 <p>
-    <a asp-action="Create">De sua Nota</a>
+    <a  asp-action="Create">De sua Nota</a>
 </p>
 <div>
     @using (Html.BeginForm("Index", "Nota", FormMethod.Get))
     {
                     <p>
                         Digite aqui sua pesquisa: @Html.TextBox("pesquisa")
-                        <input type="submit" value="Pesquisar"/>
+                        <input class="pesquisa" type="submit" value="Pesquisar"/>
                     </p>
     }
 </div>
@@ -34,9 +34,9 @@
                 @Html.DisplayFor(modelItem => item.NotaValor)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                <a class="botao" asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
+                <a class="botao" asp-action="Details" asp-route-id="@item.Id">Details</a> |
+                <a class="botao" asp-action="Delete" asp-route-id="@item.Id">Delete</a>
             </td>
         </tr>
 }
