--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -22,7 +22,7 @@ a{
 
 body {
   margin-bottom: 60px;
-  background-color: black;
+  background-color: black !important;
   color: white;
 }
 header {
@@ -41,4 +41,4 @@ header {
 .nav-item {
     padding-left: 10px;
     padding-right: 10px;
-
+}
