--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -20,6 +20,9 @@ a {
     text-decoration: none;
 
 }
+p{
+    color:white
+}
 .botao {
     border: solid;
     Border-color: #F55207;
@@ -34,11 +37,15 @@ a {
     border-color: #F55207;
     border-radius:5px;
 }
+.display-4{
+    color:white;
+
+}
 
 body {
-  margin-bottom: 60px;
-  background-color: black !important;
-  color: white;
+    margin-bottom: 60px;
+    background-color: black !important;
+    color: white;
 }
 header {
     width: 100%;
