--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -11,13 +11,13 @@
 <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
     <div class="carousel-inner">
         <div class="carousel-item active">
-            <img class="d-block w-100" src="~/imagens/vava.webp" alt="First slide">
+            <img class="d-block w-50 h-80 " src="~/imagens/vava.webp" alt="First slide">
         </div>
         <div class="carousel-item">
-            <img class="d-block w-100" src="~/imagens/forza.jpg" alt="Second slide">
+            <img class="d-block w-50 h-80" src="~/imagens/forza.jpg" alt="Second slide">
         </div>
         <div class="carousel-item">
-            <img class="d-block w-100" src="~/imagens/lol.jpg" alt="Third slide">
+            <img class="d-block w-50 h-80" src="~/imagens/lol.jpg" alt="Third slide">
         </div>
     </div>
   <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
