--- a/Views/Nota/Index.cshtml
+++ b/Views/Nota/Index.cshtml
@@ -13,7 +13,7 @@
     @using (Html.BeginForm("Index", "Nota", FormMethod.Get))
     {
                     <p>
-                        Digite aqui sua pesquisa: @Html.TextBox("pesquisa")
+                        Digite aqui sua pesquisa: @Html.TextBox("pesquisar")
                         <input class="pesquisa" type="submit" value="Pesquisar"/>
                     </p>
     }
@@ -34,9 +34,9 @@
                 @Html.DisplayFor(modelItem => item.NotaValor)
             </td>
             <td>
-                <a class="botao" asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a class="botao" asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a class="botao" asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                <a class="botao" asp-action="Edit" asp-route-id="@item.Id">Editar</a> |
+                <a class="botao" asp-action="Details" asp-route-id="@item.Id">Detalhes</a> |
+                <a class="botao" asp-action="Delete" asp-route-id="@item.Id">Deletar</a>
             </td>
         </tr>
 }
