Alteracoes barra de pesquisa

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -46,7 +46,7 @@
                     <ul class="submenu">
                         <li><a href="#">Login</a></li>
                         <li><a href="#">Cadastre-se</a></li>
-                        <li><a href="#">Sair</a></li>4
+                        <li><a href="#">Sair</a></li>
                     </ul>
                 </li>
             </div>
