--- a/Views/Descricao/Index.cshtml
+++ b/Views/Descricao/Index.cshtml
@@ -10,7 +10,7 @@
     <a asp-action="Create">Criar descrição</a>
 </p>
 <div>
-    @using (Html.BeginForm("Index", "Descrição", FormMethod.Get))
+    @using (Html.BeginForm("Index", "Descricao", FormMethod.Get))
     {
                 <p>
                     Digite aqui sua pesquisa: @Html.TextBox("pesquisa")
