--- a/Views/Nota/Index.cshtml
+++ b/Views/Nota/Index.cshtml
@@ -12,10 +12,10 @@
 <div>
     @using (Html.BeginForm("Index", "Nota", FormMethod.Get))
     {
-                    <p>
-                        Digite aqui sua pesquisa: @Html.TextBox("pesquisar")
-                        <input class="pesquisa" type="submit" value="Pesquisar"/>
-                    </p>
+        <p>
+            Digite aqui sua pesquisa: @Html.TextBox("pesquisa")
+            <input class="pesquisa" type="submit" value="Pesquisar"/>
+        </p>
     }
 </div>
 <table class="table">
