--- a/Views/Nota/Create.cshtml
+++ b/Views/Nota/Create.cshtml
@@ -18,7 +18,7 @@
                 <span asp-validation-for="NotaValor" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Criar" class="btn btn-primary" />
+                <input  type="submit" value="Criar" class="botao" />
             </div>
         </form>
     </div>
