--- a/Views/Descricao/Index.cshtml
+++ b/Views/Descricao/Index.cshtml
@@ -71,7 +71,7 @@
             <td>
                     <a class="botao" asp-action="Edit" asp-route-id="@item.DescricaoId">Editar</a> |
                     <a class="botao" asp-action="Details" asp-route-id="@item.DescricaoId">Detalhes</a> |
-                    <a class="botao" asp-action="Delete" asp-route-id="@item.DescricaoId">Delete</a>
+                    <a class="botao" asp-action="Delete" asp-route-id="@item.DescricaoId">Deletar</a>
             </td>
         </tr>
 }
