--- a/Views/Descricao/Details.cshtml
+++ b/Views/Descricao/Details.cshtml
@@ -31,6 +31,6 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.DescricaoId">Edit</a> |
+    <a asp-action="Edit" class="botao" asp-route-id="@Model?.DescricaoId">Editar</a> |
     <a asp-action="Index">Voltar</a>
 </div>
