--- a/Views/Cadastro/Delete.cshtml
+++ b/Views/Cadastro/Delete.cshtml
@@ -6,7 +6,7 @@
 
 <h1>Deletar</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Tem certeza de que deseja excluir isto?</h3>
 <div>
     <h4>Cadastro</h4>
     <hr />
@@ -27,7 +27,7 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="CadastroId" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
+        <input type="submit" value="Delete" class="botao" /> |
         <a asp-action="Index">Voltar</a>
     </form>
 </div>
