--- a/Views/Cadastro/Details.cshtml
+++ b/Views/Cadastro/Details.cshtml
@@ -25,6 +25,6 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.CadastroId">Edit</a> |
+    <a asp-action="Edit" class="botao" asp-route-id="@Model?.CadastroId">Editar</a> |
     <a asp-action="Index">Voltar</a>
 </div>
