--- a/Views/Descricao/Delete.cshtml
+++ b/Views/Descricao/Delete.cshtml
@@ -4,11 +4,11 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
+<h1>Deletar</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Tem certeza de que deseja excluir isto?</h3>
 <div>
-    <h4>Descricao</h4>
+    <h4>Descrição</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -33,7 +33,7 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="DescricaoId" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
+        <input type="submit" value="Delete" class="botao" /> |
         <a asp-action="Index">Voltar</a>
     </form>
 </div>
