--- a/Views/Nota/Delete.cshtml
+++ b/Views/Nota/Delete.cshtml
@@ -6,7 +6,7 @@
 
 <h1>Deletar</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Tem certeza de que deseja excluir isto?</h3>
 <div>
     <h4>Nota</h4>
     <hr />
@@ -21,7 +21,7 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Deletar" class="btn btn-danger" /> |
+        <input type="submit" value="Deletar" class="botao" /> |
         <a asp-action="Index">Voltar</a>
     </form>
 </div>
