--- a/Views/Nota/Delete.cshtml
+++ b/Views/Nota/Delete.cshtml
@@ -19,7 +19,7 @@
         </dd>
     </dl>
     
-    <form asp-action="Delete">
+    <form asp-action="Deletar">
         <input type="hidden" asp-for="Id" />
         <input type="submit" value="Deletar" class="botao" /> |
         <a asp-action="Index">Voltar</a>
