--- a/Views/Cadastro/Delete.cshtml
+++ b/Views/Cadastro/Delete.cshtml
@@ -25,7 +25,7 @@
         </dd>
     </dl>
     
-    <form asp-action="Delete">
+    <form asp-action="Deletar">
         <input type="hidden" asp-for="CadastroId" />
         <input type="submit" value="Delete" class="botao" /> |
         <a asp-action="Index">Voltar</a>
