--- a/Views/Descricao/Delete.cshtml
+++ b/Views/Descricao/Delete.cshtml
@@ -33,7 +33,7 @@
     
     <form asp-action="Deletar">
         <input type="hidden" asp-for="DescricaoId" />
-        <input type="submit" value="Delete" class="botao" /> |
+        <input type="submit" value="Deletar" class="botao" /> |
         <a asp-action="Index">Voltar</a>
     </form>
 </div>
