--- a/Views/Cadastro/Delete.cshtml
+++ b/Views/Cadastro/Delete.cshtml
@@ -27,7 +27,7 @@
     
     <form asp-action="Deletar">
         <input type="hidden" asp-for="CadastroId" />
-        <input type="submit" value="Delete" class="botao" /> |
+        <input type="submit" value="Deletar" class="botao" /> |
         <a asp-action="Index">Voltar</a>
     </form>
 </div>
