--- a/Views/Descricao/Delete.cshtml
+++ b/Views/Descricao/Delete.cshtml
@@ -31,7 +31,7 @@
         </dd>
     </dl>
     
-    <form asp-action="Deletar">
+    <form asp-action="Delete">
         <input type="hidden" asp-for="DescricaoId" />
         <input type="submit" value="Deletar" class="botao" /> |
         <a asp-action="Index">Voltar</a>
